--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p id="statusText">Please wait. If nothing happens your device may not be supported.</p>
     </div>
     <div class="overlayBox menuBox">
-        <p>Simple QR scanner, based on <a href="https://github.com/schmich/instascan">Instascan by Chris Schmich</a>. </p>
+        <p>Simple QR scanner, based on <a href="https://github.com/schmich/instascan">Instascan by Chris Schmich</a>. <a href="https://github.com/schmich/instascan/blob/master/LICENSE">License</a></p>
     </div>
     <script type="text/javascript">
       let scanner = new Instascan.Scanner({ video: document.getElementById('preview'), mirror: false })
